syntax = "proto3";
package cosmos.quarantine.v1beta1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/quarantine";

// Deprecated: This package has moved to provenance/quarantine/v1.

// QuarantinedFunds defines structure that represents coins that have been quarantined.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QuarantinedFunds {
  option deprecated = true;

  // to_address is the intended recipient of the coins that have been quarantined.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string to_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // unaccepted_from_addresses are the senders that have not been part of an accept yet for these coins.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  repeated string unaccepted_from_addresses = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // coins is the amount currently in quarantined for the two addresses.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  repeated cosmos.base.v1beta1.Coin coins = 3
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", deprecated = true];
  // declined is true if these funds were previously declined.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  bool declined = 4 [deprecated = true];
}

// AutoResponseEntry defines the auto response to one address from another.
//
// Deprecated: Switch to provenance/quarantine/v1.
message AutoResponseEntry {
  option deprecated = true;

  // to_address is the receiving address.
  // Deprecated: Switch to provenance/quarantine/v1
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string to_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // from_address is the sending address.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string from_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // response is the auto-response setting for these two addresses.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  AutoResponse response = 3 [deprecated = true];
}

// AutoResponseUpdate defines a quarantine auto response update that should be applied.
//
// Deprecated: Switch to provenance/quarantine/v1.
message AutoResponseUpdate {
  option deprecated = true;

  // from_address is the address that funds would be coming from.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string from_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];

  // response is the automatic action to take on funds sent from from_address.
  // Provide AUTO_RESPONSE_UNSPECIFIED to turn off an auto-response.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  AutoResponse response = 2 [deprecated = true];
}

// AutoResponse enumerates the quarantine auto-response options.
//
// Deprecated: Switch to provenance/quarantine/v1.
enum AutoResponse {
  option deprecated = true;
  option (gogoproto.goproto_enum_prefix) = false;

  // AUTO_RESPONSE_UNSPECIFIED defines that an automatic response has not been specified.
  // This means that no automatic action should be taken, i.e. this auto-response is off,
  // and default quarantine behavior is used.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  AUTO_RESPONSE_UNSPECIFIED = 0 [deprecated = true];
  // AUTO_RESPONSE_ACCEPT defines that sends should be automatically accepted, bypassing quarantine.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  AUTO_RESPONSE_ACCEPT = 1 [deprecated = true];
  // AUTO_RESPONSE_DECLINE defines that sends should be automatically declined.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  AUTO_RESPONSE_DECLINE = 2 [deprecated = true];
}

// QuarantineRecord defines information regarding quarantined funds that is stored in state.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QuarantineRecord {
  option deprecated = true;

  // unaccepted_from_addresses are the senders that have not been part of an accept yet for these coins.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  repeated bytes unaccepted_from_addresses = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress", deprecated = true];
  // accepted_from_addresses are the senders that have already been part of an accept for these coins.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  repeated bytes accepted_from_addresses = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress", deprecated = true];
  // coins is the amount that has been quarantined.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  repeated cosmos.base.v1beta1.Coin coins = 3
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", deprecated = true];
  // declined is whether these funds have been declined.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  bool declined = 4 [deprecated = true];
}

// QuarantineRecordSuffixIndex defines a list of record suffixes that can be stored in state and used as an index.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QuarantineRecordSuffixIndex {
  option deprecated = true;

  // Deprecated: Switch to provenance/quarantine/v1.
  repeated bytes record_suffixes = 1 [deprecated = true];
}
